syntax = "proto3";

package protocol;

option go_package = "./;protocol";

// 消息类型定义
enum MessageType {
  MSG_TYPE_INVALID = 0;
  MSG_TYPE_SYSTEM = 1;
  MSG_TYPE_PLAYER = 1000;
  MSG_TYPE_GUILD = 2000;
  MSG_TYPE_AUCTION = 3000;
  MSG_TYPE_MAP = 4000;
}

// 系统消息ID
enum SystemMsgId {
  MSG_SYSTEM_INVALID = 0;
}

// 玩家相关消息ID
enum PlayerMsgId {
  MSG_PLAYER_INVALID = 0;
  // 账号相关
  MSG_PLAYER_ACCOUNT_CREATE = 1001;
  MSG_PLAYER_ACCOUNT_LOGIN = 1002;
  MSG_PLAYER_PLAYER_CREATE = 1003;
  MSG_PLAYER_PLAYER_LOGIN = 1004;
  MSG_PLAYER_PLAYER_LOGOUT = 1005;
  // 基础信息
  MSG_PLAYER_GET_INFO = 1006;
  MSG_PLAYER_UPDATE_INFO = 1007;
  
  // 背包相关
  MSG_PLAYER_INVENTORY_GET = 1010;
  MSG_PLAYER_INVENTORY_ADD = 1011;
  MSG_PLAYER_INVENTORY_REMOVE = 1012;
  MSG_PLAYER_INVENTORY_USE = 1013;
  MSG_PLAYER_INVENTORY_SORT = 1014;
  
  // 装备相关
  MSG_PLAYER_EQUIPMENT_GET = 1020;
  MSG_PLAYER_EQUIPMENT_EQUIP = 1021;
  MSG_PLAYER_EQUIPMENT_UNEQUIP = 1022;
  MSG_PLAYER_EQUIPMENT_UPGRADE = 1023;
  
  // 邮件相关
  MSG_PLAYER_MAIL_GET_LIST = 1030;
  MSG_PLAYER_MAIL_GET_DETAIL = 1031;
  MSG_PLAYER_MAIL_SEND = 1032;
  MSG_PLAYER_MAIL_DELETE = 1033;
  MSG_PLAYER_MAIL_RECEIVE = 1034;
  
  // 任务相关
  MSG_PLAYER_TASK_GET_LIST = 1040;
  MSG_PLAYER_TASK_GET_DETAIL = 1041;
  MSG_PLAYER_TASK_ACCEPT = 1042;
  MSG_PLAYER_TASK_SUBMIT = 1043;
  MSG_PLAYER_TASK_CANCEL = 1044;
  
  // 技能相关
  MSG_PLAYER_SKILL_GET_LIST = 1050;
  MSG_PLAYER_SKILL_LEARN = 1051;
  MSG_PLAYER_SKILL_UPGRADE = 1052;
  MSG_PLAYER_SKILL_USE = 1053;
}

// 公会相关消息ID
enum GuildMsgId {
  MSG_GUILD_INVALID = 0;
  MSG_GUILD_CREATE = 2001;
  MSG_GUILD_JOIN = 2002;
  MSG_GUILD_LEAVE = 2003;
  MSG_GUILD_DISBAND = 2004;
  MSG_GUILD_GET_INFO = 2005;
  MSG_GUILD_GET_MEMBERS = 2006;
  MSG_GUILD_APPLY = 2007;
  MSG_GUILD_PROCESS_APPLY = 2008;
  MSG_GUILD_UPDATE_NOTICE = 2009;
  MSG_GUILD_PROMOTE_MEMBER = 2010;
  MSG_GUILD_KICK_MEMBER = 2011;
}

// 拍卖行相关消息ID
enum AuctionMsgId {
  MSG_AUCTION_INVALID = 0;
  MSG_AUCTION_CREATE = 3001;
  MSG_AUCTION_PLACE_BID = 3002;
  MSG_AUCTION_BUYOUT = 3003;
  MSG_AUCTION_CANCEL = 3004;
  MSG_AUCTION_GET_LIST = 3005;
  MSG_AUCTION_GET_DETAIL = 3006;
  MSG_AUCTION_GET_MY_AUCTIONS = 3007;
}

// 地图相关消息ID
enum MapMsgId {
  MSG_MAP_INVALID = 0;
  MSG_MAP_ENTER = 4001;
  MSG_MAP_LEAVE = 4002;
  MSG_MAP_MOVE = 4003;
  MSG_MAP_GET_PATH = 4004;
  MSG_MAP_GET_OBJECTS = 4005;
  MSG_MAP_SYNC_OBJECTS = 4006;
}

// 基础消息结构
message Message {
  uint32 msg_id = 1;
  int64 player_id = 2;
  int64 session_id = 3;
  bytes data = 4;
}

// 响应消息结构
message Response {
  uint32 msg_id = 1;
  int32 result = 2;
  string error_msg = 3;
  bytes data = 4;
}

// 账号创建请求
message AccountCreateRequest {
  string account = 1;
  string password = 2;
  string device_id = 3;
  int32 device_type = 4;
  string version = 5;
}

// 账号创建响应
message AccountCreateResponse {
  bool success = 1;
  string error_msg = 2;
}

// 账号登录请求
message AccountLoginRequest {
  string account = 1;
  string password = 2;
  string device_id = 3;
  int32 device_type = 4;
  string version = 5;
}

// 玩家信息
message PlayerInfo {
  int64 player_id = 1;
  string name = 2;
  int32 level = 3;
  int32 sex = 4;
  int32 age = 5;
}

// 账号登录响应
message AccountLoginResponse {
  bool success = 1;
  string error_msg = 2;
  repeated PlayerInfo players = 3;
}

// 玩家创建请求
message PlayerCreateRequest {
  string name = 1;
  int32 sex = 2;
  int32 age = 3;
}

// 玩家创建响应
message PlayerCreateResponse {
  bool success = 1;
  string error_msg = 2;
  PlayerInfo player = 3;
}

// 玩家登录请求
message PlayerLoginRequest {
  int64 player_id = 1;
}

// 玩家登录响应
message PlayerLoginResponse {
  bool success = 1;
  string error_msg = 2;
  int64 player_id = 3;
  string name = 4;
  int32 level = 5;
  int64 gold = 6;
}



// 玩家获取信息请求
message PlayerGetInfoRequest {
  int64 player_id = 1;
}

// 玩家获取信息响应
message PlayerGetInfoResponse {
  bool success = 1;
  string error_msg = 2;
  PlayerBasicInfo player_info = 3;
}

// 玩家登出请求
message PlayerLogoutRequest {
  int64 player_id = 1;
}

// 玩家登出响应
message PlayerLogoutResponse {
  bool success = 1;
  string error_msg = 2;
}

// 玩家基础信息
message PlayerBasicInfo {
  int64 player_id = 1;
  string name = 2;
  int32 level = 3;
  int64 exp = 4;
  int64 gold = 5;
  int32 vip_level = 6;
  int32 server_id = 7;
  int64 create_time = 8;
}

// 物品信息
message ItemInfo {
  int64 item_id = 1;
  int32 item_type = 2;
  string item_name = 3;
  int32 item_count = 4;
  int32 item_level = 5;
  int32 item_quality = 6;
  int32 bind_type = 7;
  int32 position = 8;
}

// 任务信息
message TaskInfo {
  int64 task_id = 1;
  int32 task_type = 2;
  string task_name = 3;
  string task_desc = 4;
  int32 status = 5;
  repeated int32 progress = 6;
  repeated ItemInfo rewards = 7;
  int64 accept_time = 8;
  int64 complete_time = 9;
}

// 技能信息
message SkillInfo {
  int64 skill_id = 1;
  string skill_name = 2;
  int32 skill_level = 3;
  int32 skill_type = 4;
  int64 skill_cool_time = 5;
  int64 skill_damage = 6;
}

// 邮件信息
message MailInfo {
  int64 mail_id = 1;
  int64 sender_id = 2;
  string sender_name = 3;
  int64 receiver_id = 4;
  string receiver_name = 5;
  string title = 6;
  string content = 7;
  repeated ItemInfo items = 8;
  int64 gold = 9;
  int32 status = 10;
  int64 send_time = 11;
  int64 read_time = 12;
}

// 公会信息
message GuildInfo {
  int64 guild_id = 1;
  string guild_name = 2;
  int32 level = 3;
  int64 exp = 4;
  int64 leader_id = 5;
  string leader_name = 6;
  int32 member_count = 7;
  int32 max_members = 8;
  string notice = 9;
  int64 create_time = 10;
}

// 公会成员信息
message GuildMemberInfo {
  int64 player_id = 1;
  string name = 2;
  int32 position = 3;
  int64 contribution = 4;
  int64 join_time = 5;
  bool online = 6;
  int64 last_online = 7;
}

// 公会申请信息
message GuildApplyInfo {
  int64 apply_id = 1;
  int64 player_id = 2;
  string player_name = 3;
  int64 guild_id = 4;
  string guild_name = 5;
  int64 apply_time = 6;
  int32 status = 7;
  string remark = 8;
}

// 拍卖物品信息
message AuctionItemInfo {
  int64 auction_id = 1;
  int64 seller_id = 2;
  string seller_name = 3;
  int64 item_id = 4;
  string item_name = 5;
  int32 item_type = 6;
  int32 item_count = 7;
  int32 auction_type = 8;
  int64 starting_price = 9;
  int64 current_price = 10;
  int64 buyout_price = 11;
  int64 bid_increment = 12;
  int64 start_time = 13;
  int64 end_time = 14;
  int32 status = 15;
  int64 current_winner = 16;
}

// 拍卖竞拍信息
message AuctionBidInfo {
  int64 bid_id = 1;
  int64 player_id = 2;
  string player_name = 3;
  int64 auction_id = 4;
  int64 bid_price = 5;
  int64 bid_time = 6;
}

// 地图对象信息
message MapObjectInfo {
  int64 object_id = 1;
  int32 object_type = 2;
  int64 map_id = 3;
  float x = 4;
  float y = 5;
  float z = 6;
  float orientation = 7;
  float move_speed = 8;
  bool is_moving = 9;
  int32 status = 10;
}

// 地图移动请求
message MapMoveRequest {
  int64 map_id = 1;
  float x = 2;
  float y = 3;
  float z = 4;
  float orientation = 5;
}

// 地图移动响应
message MapMoveResponse {
  bool success = 1;
  string error_msg = 2;
  int64 object_id = 3;
  float x = 4;
  float y = 5;
  float z = 6;
  float orientation = 7;
  int64 time = 8;
}

// 路径请求
message MapPathRequest {
  int64 map_id = 1;
  float start_x = 2;
  float start_y = 3;
  float end_x = 4;
  float end_y = 5;
}

// 路径响应
message MapPathResponse {
  bool success = 1;
  string error_msg = 2;
  repeated Point path = 3;
  message Point {
    float x = 1;
    float y = 2;
    float z = 3;
  }
}

// 地图对象同步
message MapSyncObjects {
  int64 map_id = 1;
  repeated MapObjectInfo objects = 2;
  int64 sync_time = 3;
}